--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,8 +93,6 @@ jobs:
         zip -j ./${MOD_NAME}-linux-riscv64.zip ./bin/${MOD_NAME}/${MOD_NAME}-linux-riscv64 ./scripts/install-linux.bash ./scripts/install-win.ps1
       env:
         MOD_NAME: ${{ env.MOD_NAME }}
-    - name: List files in the directory
-      run: ls -la ./
     - name: Create Release Draft
       # Create a release draft with the version and description from the CHANGELOG.md file.
       # The tag will be created and applied to the commit when you publish the release.
@@ -105,9 +103,6 @@ jobs:
         name: Release ${{ needs.parse-changelog.outputs.version }}
         body: ${{ env.unescaped_description }}
         fail_on_unmatched_files: true
-        files: |
-          ./${MOD_NAME}-linux-x64.zip
-          ./${MOD_NAME}-linux-arm64.zip
-          ./${MOD_NAME}-linux-riscv64.zip
+        files: './*.zip'
       env:
         MOD_NAME: ${{ env.MOD_NAME }}
